updated php file and show poster overflow fixed in mobile

--- a/css/home.css
+++ b/css/home.css
@@ -31,7 +31,7 @@ section{
 }
 
 .principal {
-    background-image: url("./../media/theatre.png");
+    background-image: url("./../media/theatre.jpg");
     background-size: cover;
     background-color: #1D0F84;
     width:100%;
@@ -220,8 +220,8 @@ section{
 }
 
 .size-show {
-    height:525px;
-    width:350px;
+    /* height:525px; */
+    width: 100%;
     margin-left: -1px;
 }
 
